<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/largeMargin"
        android:background="@drawable/card_background"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/normalPadding"
        android:paddingStart="@dimen/normalPadding"
        android:paddingEnd="@dimen/smallPadding">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/danial_image"
            android:src="@drawable/daniel_image"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normalMargin"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/largeText"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/job"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/normalText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:drawablePadding="8dp"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/location"
                android:textColor="@color/tertiary_text_color"
                android:textSize="@dimen/specialText"
                app:drawableStartCompat="@drawable/ic_location" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_regular"
                    android:text="@string/reviews_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normalText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/smallMargin"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/stars_rate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normalText"
                    android:drawablePadding="4dp"
                    app:drawableEndCompat="@drawable/ic_star_rate" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/normalMargin"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/red_chips"
                android:fontFamily="@font/dm_sans_regular"
                android:paddingHorizontal="@dimen/smallPadding"
                android:paddingVertical="@dimen/specialPadding"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="@dimen/normalText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMargin"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/nationality"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/normalText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/dm_sans_regular"
                android:text="@string/last_day_active"
                android:textColor="@color/last_active_text_color"
                android:textSize="@dimen/normalText" />
        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>